--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pie-and-mash.html">Pie & Mash</a>
+        <ul>
+            <li><a href="recipes/pie-and-mash.html">Pie & Mash</a></li>
+            <li><a href="">YOUR RECIPE 2</a></li>
+            <li><a href="">YOUR RECIPE 2</a></li>
+        </ul>
+        
     </body>
 </html>
