--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/pie-and-mash.html">Pie & Mash</a></li>
-            <li><a href="">YOUR RECIPE 2</a></li>
+            <li><a href="recipes/reuben-sandwich.html">Reuben Sanwich</a></li>
             <li><a href="">YOUR RECIPE 2</a></li>
         </ul>
         
