Add second recipe "Reuben Sandwich"
Fix size of images in both recipes by using height and width tags

--- a/recipes/pie-and-mash.html
+++ b/recipes/pie-and-mash.html
@@ -6,8 +6,9 @@
     </head>
 
     <body>
+
         <h1><strong>Pie & Mash</strong></h1>
-        <img src="../images/pie&mash.jpg" alt="A plate of pie and mash">
+        <img src="../images/pie-mash.jpg" alt="A plate of pie and mash" height="600" width="600">
         
         <h2>Description</h2>
         <p>Pie & mash is a traditional working class dish from the 1800s originating in East London. It is comrpised of 3 parts; a minced beef pie, mashed potatoes, and a parsley sauce known as "liquor".</p>
