--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="recipes/pie-and-mash.html">Pie & Mash</a></li>
             <li><a href="recipes/reuben-sandwich.html">Reuben Sanwich</a></li>
-            <li><a href="">YOUR RECIPE 2</a></li>
+            <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
         </ul>
         
     </body>
